# ledcc

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE_HEADER.txt  README.md  README.txt  example.xml  main.cpp
cmake/: CompileFlags.cmake  FindUSB1.cmake  GNUInstallDirs.cmake  Options.cmake  sourceconfig.cmake
diagrams/: AnimationItemUpdate.graphml
lang/: ledcc_de.ts  ledcc_en.ts
src/: CMakeLists.txt  configure.h.in.cmake  icons.qrc  main.cpp
src/aqp/: CMakeLists.txt
src/cfiles/: AsciiHex.c  AsciiHex.h
src/core/: AnimationOptionsStruct.hpp  Animations.cpp  Animations.hpp  CMakeLists.txt  Config.cpp  Config.hpp  Draw.cpp  Draw.hpp  Global.hpp  Global.hpp.in  Options.cpp  Options.hpp  SendThread.cpp  SendThread.hpp  Sender.cpp  Sender.hpp  System.cpp  System.hpp  USBInterface.cpp  USBInterface.hpp  XMLPlaylistReader.cpp  XMLPlaylistReader.hpp  XMLPlaylistWriter.cpp  XMLPlaylistWriter.hpp  XmlPlaylistReader.cpp  XmlPlaylistReader.hpp  XmlPlaylistWriter.cpp  XmlPlaylistWriter.hpp
src/core/animations/: Animation.cpp  Animation.hpp  AnimationHandler.cpp  AnimationHandler.hpp  Animations.cpp  Animations.hpp  AxisNailWall.cpp  AxisNailWall.hpp  CMakeLists.txt  ConwaysGameOfLife.cpp  ConwaysGameOfLife.hpp  Draw.cpp  Draw.hpp  Firework.cpp  Firework.hpp  Lift.cpp  Lift.hpp  Loadbar.cpp  Loadbar.hpp  LookUpTables.hpp  Rain.cpp  Rain.hpp  RandomFiller.cpp  RandomFiller.hpp  RandomSpark.cpp  RandomSpark.hpp  RandomSparkFlash.cpp  RandomSparkFlash.hpp  RandomZLift.cpp  RandomZLift.hpp  StringFly.cpp  StringFly.hpp  Wall.cpp  Wall.hpp  Wave.cpp  Wave.hpp  WireBoxCenterShrinkGrow.cpp  WireBoxCenterShrinkGrow.hpp  WireBoxCornerShrinkGrow.cpp  WireBoxCornerShrinkGrow.hpp
src/gui/: AboutDialog.cpp  AboutDialog.hpp  AboutDialog.ui  AddDialog.cpp  AddDialog.hpp  AddDialog.ui  AnimationItem.cpp  AnimationItem.hpp  AnimationListWidget.cpp  AnimationListWidget.hpp  AnimationOptions.cpp  AnimationOptions.hpp  AnimationOptions.ui  AnimationOptionsGroupBox.cpp  AnimationOptionsGroupBox.hpp  AnimationOptionsGroupBox.ui  AnimationPlayListWidget.cpp  AnimationPlayListWidget.hpp  AnimationPlaylistWidget.cpp  AnimationPlaylistWidget.hpp  AnimationPropertiesPreview.cpp  AnimationPropertiesPreview.hpp  AnimationPropertiesPreview.ui  CMakeLists.txt  DebugDockWidget.cpp  DebugDockWidget.hpp  DebugDockWidget.ui  HelpDialog.cpp  HelpDialog.hpp  HelpDialog.ui  ListWidget.cpp  ListWidget.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  PortMessageBox.cpp  PortMessageBox.hpp  SettingsDialog.cpp  SettingsDialog.hpp  SettingsDialog.ui  (+1 more)
src/preview/qml/: main.qml
src/scripts/: cppcheck.sh
